--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
   "redirects": [
     {
       "source": "/",
-      "destination": "https://github.com/kurt-liao/so-stats"
+      "destination": "https://github.com/samnoon1971/stackoverflow-stats"
     }
   ],
   "github": {
